--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -2,7 +2,7 @@
 %html
   %head
     %meta{:charset => "utf-8"}
-    %title L'Assemblée constituante citoyenne du Québec #{content_for?(:page_title) ? " - " + yield(:page_title) : ""}
+    %title #{content_for?(:page_title) ? yield(:page_title) + " - L'Assemblée constituante citoyenne du Québec" : "L'Assemblée constituante citoyenne du Québec"}
     %meta{:content => "width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no", :name => "viewport"}
     %meta{:name => "viewport", :content => "initial-scale=1.0, user-scalable=no"}
     %meta{:content => "", :name => "description"}
@@ -49,7 +49,7 @@
             -if false
               %li.dropdown
                 %a{href: "#", class: "dropdown-toggle", "data-toggle" => "dropdown", role: "button", "aria-haspopup" => "true", "aria-expanded" => "false"}
-                  Noyau central
+                  Organigramme
                   %span.caret
 
                 %ul.dropdown-menu
@@ -64,7 +64,7 @@
               %ul.dropdown-menu
                 %li= link_to "Bibliothèque".html_safe, bibliotheque_path
                 %li= link_to "Médiathèque".html_safe, mediatheque_path
-                %li= link_to "Outils de promotion", promotional_tools_path
+                %li= link_to "Promouvoir", promotional_tools_path
 
             %li.dropdown
               %a{href: "#", class: "dropdown-toggle", "data-toggle" => "dropdown", role: "button", "aria-haspopup" => "true", "aria-expanded" => "false"}
