Changer le titre de la page du manifeste pour 'Signez le manifeste'

--- a/app/views/home/manifest.haml
+++ b/app/views/home/manifest.haml
@@ -1,5 +1,5 @@
 -content_for :page_title do
-  Le manifeste de l'Assemblée constituante citoyenne du Québec
+  Signez le manifeste
 
 -breadcrumb :manifest
 .row
