--- a/app/views/home/promotional_tools.haml
+++ b/app/views/home/promotional_tools.haml
@@ -4,12 +4,19 @@
 -breadcrumb :promotional_tools
 
 .row
-  .col-md-3
-    =image_tag "logo2.png", class: "img-responsive"
-  .col-md-9
-    %h2.no-margin Portez fièrement votre macaron sur Facebook!
+  .col-md-12
+    %h2.sub-section Portez fièrement votre macaron sur Facebook!
     %p 
-      Grâce au service <i>Picbadge</i>, votre avatar <i>Facebook</i> sera automatiquement modifié afin d'y inclure notre logo!
+      Grâce au service <i>Picbadge</i>, votre avatar <i>Facebook</i> sera automatiquement modifié afin d'y inclure notre logo #{image_tag "logo2.png", width: "50"}!    
 
     %p.lead
-      #{link_to "Nous vons invitons à porter nos couleurs maintenant!", "https://www.picbadges.com/community/5472195caa30b9aa172f6092", target: "_blank", class: "btn btn-primary btn-lg"}
+      #{link_to "Nous vons invitons à porter nos couleurs dès maintenant!", "https://www.picbadges.com/community/5472195caa30b9aa172f6092", target: "_blank", class: "btn btn-primary"}
+
+.row
+  .col-md-12
+    %h2.sub-section Tract à distribuer
+
+    %p
+      =fa_icon "download"
+      =link_to "Téléchargez le tract", asset_url("tract.pdf"), target: "_blank"
+
