Ajouter les deux vidéos qui sont sur la page d'accueil dans la médiathèque

--- a/app/views/home/mediatheque.haml
+++ b/app/views/home/mediatheque.haml
@@ -7,6 +7,16 @@
   .col-md-6    
     .thumbnail
       .youtube-container
+        .youtube-player{"data-id" => "pvR3yU2KB44"}    
+
+  .col-md-6    
+    .thumbnail
+      .youtube-container
+        .youtube-player{"data-id" => "YnKJn2_3Dzk"}    
+
+  .col-md-6    
+    .thumbnail
+      .youtube-container
         .youtube-player{"data-id" => "36HRbEX02zA"}
   .col-md-6    
     .thumbnail
