Compléter l'organigramme. Il reste à intégrer les images

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -128,6 +128,21 @@ no-margin {
 td.options {
   text-align: right;
 }
+
+.affix {
+  top: 100px;
+}
+
+section {
+  padding-top:40px;
+  margin-top:-40px;
+}
+
+#structure-nav li.active > a {
+  color: #777;
+  font-style: italic;
+}
+
 /* On demand youtube containers */
 .youtube-container { display: block; margin: 20px auto; width: 100%; max-width: 600px; }
 .youtube-player { display: block; width: 100%; /* assuming that the video has a 16:9 ratio */ padding-bottom: 56.25%; overflow: hidden; position: relative; width: 100%; height: 100%; cursor: hand; cursor: pointer; display: block; }
