--- a/app/views/structure/structure_nationale/_comites_nationaux.haml
+++ b/app/views/structure/structure_nationale/_comites_nationaux.haml
@@ -1,8 +1,11 @@
 %h3.sub-section
   Nos comités nationaux
 
+%p
+  =image_tag "organigramme/comites_nationaux.jpg", class: "img-responsive thumbnail"
+
 %section#comite-mobilisation
-  %h3 Mobilisation
+  %h4.sub-section Mobilisation
   %ul
     %li Répertorie les événements où nous pourrions informer les gens et les rallier à notre démarche;
     %li Bâtit des ponts avec la société civile (organismes communautaires, regroupements de citoyens, syndicats, etc.; 
@@ -13,7 +16,7 @@
     %li Accomplit toute autre tâche jugée pertinente.  
 
 %section#comite-financement
-  %h3 Financement et trésorie
+  %h4.sub-section Financement et trésorie
   %ul
     %li Fait les démarches relatives à notre structure corporative (OSBL);
     %li Gère le budget de l’Assemblée constituante citoyenne du Québec avec l’OSBL;
@@ -27,7 +30,7 @@
     %li Accomplit toute autre tâche jugée pertinente.  
 
 %section#comite-communications
-  %h3 Communications
+  %h4.sub-section Communications
 
   %p Ce comité est la pierre angulaire de notre démarche. Nous suggérons qu’il soit divisé en quatre sous-comités: Infographie, Information publique, Médias et Événements.
   %ul
@@ -41,7 +44,7 @@
     %li Accomplit toute autre tâche jugée pertinente.
 
 %section#comite-education
-  %h3 Éducation (Ateliers constituants)
+  %h4.sub-section Éducation (Ateliers constituants)
   %ul
     %li Prépare et organise les ateliers constituants dans les régions;
     %li Assure la gestion des comptes rendus de ces ateliers constituants;
@@ -50,7 +53,7 @@
     %li Accomplit toute autre tâche jugée pertinente.  
 
 %section#comite-web
-  %h3 Web
+  %h4.sub-section Web
   %ul
     %li Veille à la gestion de notre site Web et aux mises à jour;
     %li Crée les pages de réseaux sociaux et assure l’uniformité des informations;
@@ -59,7 +62,7 @@
     %li Accomplit toute autre tâche jugée pertinente.  
 
 %section#comite-secretariat
-  %h3 Secrétariat et registrariat
+  %h4.sub-section Secrétariat et registrariat
   %ul
     %li Assure que tous les documents officiels produits par l’Assemblée constituante citoyenne du Québec sont rédigés dans un français impeccable;   
     %li Vérifie et révise tous les documents;
@@ -69,9 +72,9 @@
     %li Accomplit toute autre tâche jugée pertinente.  
 
 %section#comite-resolution
-  %h3 Résolution de problèmes
+  %h4.sub-section Résolution de problèmes
 
-  %h4 1. Définition du problème
+  %h5 1. Définition du problème
   %p
     Avant de tenter de régler un problème, il importe de bien le définir. Parfois, cette seule étape permet d'en arriver à modifier certaines perceptions et à régler une bonne part du problème qui nous préoccupe. Trouver des solutions à une difficulté qui demeure vague et confuse ou à plusieurs problèmes à la fois peut sembler décourageant. Assurez-vous de séparer les problèmes s'il y en a plusieurs. Afin de préciser la nature de la difficulté, posez-vous les questions suivantes : 
 
@@ -82,11 +85,11 @@
     %li Que ressentez-vous? 
     %li Est-ce bien votre problème ? Questionnez-vous aussi sur le but que vous souhaitez atteindre au terme de ce processus. Quelle sera la situation, une fois ce problème résolu?
 
-%h4 2. Générez des solutions
+%h5 2. Générez des solutions
 %p
   Cette étape consiste à dresser un inventaire, le plus large possible, des solutions au problème que vous avez identifié, sans en juger pour l'instant la valeur ou le réalisme. Souvent, la solution se trouve dans une action que vous n'avez peut-être pas envisagée. Un autre risque est de porter un jugement trop rapide sur les idées qui vous viennent en tête et de rejeter des solutions originales, pouvant être constructives.
 
-%h4 3. Choisissez une solution
+%h5 3. Choisissez une solution
 %p 
   Après avoir formulé toutes vos idées, il est temps de passer à la prise de décision. Souvent, la solution réside dans une combinaison de plusieurs éléments de solution. Pesez le pour et le contre des options et la faisabilité de celles-ci. Procédez par élimination. 
 
@@ -94,14 +97,14 @@
   Le processus de résolution de problèmes peut parfois être stoppé à cette étape : plutôt que de courir le risque de vous tromper, il peut être tentant de préférer ne rien choisir. Assurez-vous également de pouvoir mettre vous-même en œuvre la solution choisie et de ne pas compter uniquement sur les autres.
 
 
-%h4 4. Appliquez la solution choisie
+%h5 4. Appliquez la solution choisie
 
 %p
   Décidez des étapes à accomplir afin d'appliquer votre solution et... passez à l'action! Il n'est pas nécessaire d'être certain, certaine qu'il s'agit de LA bonne solution avant de l'essayer. Les meilleures solutions du monde ne régleront rien si vous ne les appliquez pas! 
 %p
   Certains comportements ou certaines craintes (ex. : remise à plus tard, peur du jugement ou des critiques) peuvent vous faire hésiter à mettre en application la solution choisie. Il est important d'en prendre conscience. Prendre une décision entraîne certaines conséquences, mais il est souvent possible de les évaluer en bonne partie. Surtout, n'oubliez pas que passer à l'action amène souvent un sentiment de satisfaction et augmente votre confiance en vous.
 
-%h4 5. Évaluez les solutions appliquées
+%h5 5. Évaluez les solutions appliquées
 
 %p
   Laissez-vous un peu de temps pour voir si le problème est vraiment réglé. Vous sentez-vous soulagé, soulagée? Votre objectif est-il atteint? Prenez une minute pour identifier ce que vous en retenez. Si, au contraire, le problème persiste après quelque temps, reprenez chacune des étapes de la résolution de problèmes. Certains éléments peuvent vous apparaître sous un jour nouveau.
