--- a/app/views/structure/structure_nationale/_coor.haml
+++ b/app/views/structure/structure_nationale/_coor.haml
@@ -2,6 +2,9 @@
   Comité organisateur (COOR)
 
 %p
+  =image_tag "organigramme/coor.jpg", class: "img-responsive thumbnail"
+
+%p
   Le comité organisateur (COOR) est formé du Conseil des opérations (C.O.), d’un membre des différents comités nationaux (A-mobilisation, B-financement et trésorerie, C-communications, D-éducation, E-web, F-secrétariat et régistrariat, G-résolution de problèmes) et des dix-sept responsables des services en région (RSR). Il a comme mandat d’offrir des services à l’ensemble des Assemblées constituantes régionales québécoises (ACRQ).
 
 %p
