--- a/app/views/structure/structure_nationale/_rsr.haml
+++ b/app/views/structure/structure_nationale/_rsr.haml
@@ -1,8 +1,11 @@
-%h2.sub-section
+%h3.sub-section
   Responsables des services en région (RSR)
 
 %p
-  Le responsable des services en région (RSR) est le représentant officiel de son ACRQ et il assure la surveillance générale de ses affaires. Il est le lien de sa région avec les autres régions lors des réunions du COOR et assiste aux Tables nationales. Il a également la responsabilité de prendre les mesures nécessaires pour assurer le bon fonctionnement des rencontres de sa région. Les tâches suivantes incombent au RSR et s’ajoutent à ses tâches de responsabilité :
+  =image_tag "organigramme/rsr.jpg", class: "img-responsive thumbnail"
+
+%p
+  Le responsable des services en région (RSR) est le représentant officiel de son #{link_to "ACRQ", hives_path} et il assure la surveillance générale de ses affaires. Il est le lien de sa région avec les autres régions lors des réunions du COOR et assiste aux Tables nationales. Il a également la responsabilité de prendre les mesures nécessaires pour assurer le bon fonctionnement des rencontres de sa région. Les tâches suivantes incombent au RSR et s’ajoutent à ses tâches de responsabilité :
 
 %ul
   %li En collaboration avec les autres responsables de sa région, établit les objectifs et les priorités visant à satisfaire les besoins de son ACRQ; 
