--- a/app/views/structure/structure_nationale/_tables_nationales.haml
+++ b/app/views/structure/structure_nationale/_tables_nationales.haml
@@ -2,6 +2,8 @@
   Tables nationales
 
 %p
+  =image_tag "organigramme/tables_nationales.jpg", class: "img-responsive thumbnail"
+%p
   Les Tables nationales sont le lieu où toutes les résolutions entérinées par les régions sont transmises et celles proposées par le Comité organisateur (COOR) sont déposées. Bien qu’elles soient des Assemblées souveraines, chacune des décisions adoptées par les constituant.e.s qui y participent doit ensuite être entérinée dans chacune des régions. Le COOR est le responsable de l’organisation de ces Tables nationales.
 
 %p Les Tables nationales se tiendront mensuellement, la dernière fin de semaine complète de chaque mois, suite aux réunions des ACRQ, à compter de janvier 2016. 
