--- a/app/views/structure/structures_regionales/_responsables_regionaux.haml
+++ b/app/views/structure/structures_regionales/_responsables_regionaux.haml
@@ -1,6 +1,9 @@
 %h2.sub-section
   Nos responsables régionaux
 
+%p
+  =image_tag "organigramme/responsables_regionaux.jpg", class: "img-responsive thumbnail"
+
 %section#responsable-ram
   %h3.sub-section Responsable de l’accueil et de la mobilisation (RAM) 
 
