--- a/app/views/structure/_structure_organisationnelle_globale.haml
+++ b/app/views/structure/_structure_organisationnelle_globale.haml
@@ -1,17 +1,17 @@
 
 %p
-  =image_tag "structure_organisationnelle_globale.jpg", class: "img-responsive thumbnail"
+  =image_tag "/organigramme/structure_organisationnelle_globale.jpg", class: "img-responsive thumbnail"
 %p
   L’Assemblée constituante citoyenne du Québec vous remercie de prendre le temps nécessaire pour bien comprendre les fondements de notre organisation. Nous tenons à préciser que la structure de notre organisation est horizontale. 
   
 %p
   Bien que tous les postes occupés par les constituant.e.s nécessitent des talents et des compétences particulières, aucun des responsables n’a autorité sur les autres. Les constituant.e.s impliqués sont des personnes de confiance qui travaillent avec enthousiasme et détermination à la poursuite de notre objectif commun, soit :
 %blockquote 
-  %h3 La convocation d’une Assemblée constituante, totalement libre de ses délibérations!
+  %strong La convocation d’une Assemblée constituante, totalement libre de ses délibérations!
 
 %p
   Pour ce faire, seul un nombre imposant de Québécois et Québécoises comprenant bien le sens de notre démarche permettra de changer cette culture de démocratie représentative qui est, selon nous, la source de nombreux abus de pouvoir que nous subissons collectivement. 
 %p
   Voilà pourquoi nous nous engageons à tout mettre en œuvre pour mobiliser, le plus rapidement possible, un minimum de 1000 personnes par circonscription comprenant bien le sens d’une démarche constituante libre de ses délibérations.    
 %blockquote
-  %h3 Pour le moment, nous faisons le pari que nos représentants élus respecteront notre volonté.
+  %strong Pour le moment, nous faisons le pari que nos représentants élus respecteront notre volonté.
