--- a/app/views/structure/structure_nationale/_conseil_des_operations.haml
+++ b/app/views/structure/structure_nationale/_conseil_des_operations.haml
@@ -2,6 +2,9 @@
   Conseil des opérations (C.O.)
 
 %p
+  =image_tag "organigramme/conseil_des_operations.jpg", class: "img-responsive thumbnail"
+
+%p
   Le Conseil des opérations (C.O.) se veut le cœur de la structure horizontale de l’Assemblée constituante citoyenne du Québec. Toutes ses décisions sont prises en collégialité. C’est lui qui voit au bon fonctionnement et à l’harmonisation de nos structures. Son mandat est d’assurer l’unité de toutes les entités actuellement formées et à venir. Ses membres doivent être choisis avec beaucoup de vigilance puisque c’est l’épine dorsale de notre structure et le fer de lance de notre démarche. L’engagement des membres qui en feront partie doit être basé sur une intégrité à toute épreuve pour ne servir aucun autre intérêt que celui du peuple.    
 
 %p
