Corriger le smooth scroll afin que l'adresse URL change quand on clique sur une ancre

--- a/app/views/structure/_navigation.haml
+++ b/app/views/structure/_navigation.haml
@@ -47,17 +47,15 @@
       $(this).parent().addClass('active');
     })
 
-    $('a[href*=#]:not([href=#])').click(function() {
-      if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'') && location.hostname == this.hostname) {
+    $('a[href^="#"]').click(function() {
         var target = $(this.hash);
-        target = target.length ? target : $('[name=' + this.hash.slice(1) +']');
-        if (target.length) {
-          $('html,body').animate({
-            scrollTop: target.offset().top
-          }, 1000);
-          return false;
-        }
-      }
+        var hash = this.hash;
+        if (target.length == 0) target = $('a[name="' + this.hash.substr(1) + '"]');
+        if (target.length == 0) target = $('html');
+        $('html, body').animate({ scrollTop: target.offset().top }, 500, function (){
+            location.hash = hash;
+        });
+        return false;
     });
 
   });
