Ne pas afficher la navigation dans l'organigramme sur les appareils mobiles

--- a/app/views/structure/show.haml
+++ b/app/views/structure/show.haml
@@ -4,7 +4,7 @@
 -breadcrumb :organigramme
 
 .row
-  .col-xs-8
+  .col-md-8
     =render partial: "structure_organisationnelle_globale"
 
     %hr/
@@ -39,5 +39,5 @@
         %section#rsr
           =render partial: "/structure/structure_nationale/rsr"
 
-  .col-xs-4
+  .col-md-4.hidden-xs.hidden-sm
     =render partial: "navigation"
