Remplacer libre DE ses délibarations par libre DANS ses délibérations

--- a/app/views/home/moyen.haml
+++ b/app/views/home/moyen.haml
@@ -45,7 +45,7 @@
 
         %li Diffuser le résultat de l’expérience constituante à toute la population du Québec.
 
-    %h4 Objectif 3 : D’ici la prochaine élection générale au Québec, faire pression sur les partis et sur l’Assemblée nationale pour nous assurer que soit convoquée, rapidement après l’élection, une Assemblée constituante, totalement libre de ses délibérations. 
+    %h4 Objectif 3 : D’ici la prochaine élection générale au Québec, faire pression sur les partis et sur l’Assemblée nationale pour nous assurer que soit convoquée, rapidement après l’élection, une Assemblée constituante, totalement libre dans ses délibérations. 
     
     %p
       %strong Moyens :
