--- a/app/views/structure/_structure_organisationnelle_globale.haml
+++ b/app/views/structure/_structure_organisationnelle_globale.haml
@@ -7,7 +7,7 @@
 %p
   Bien que tous les postes occupés par les constituant.e.s nécessitent des talents et des compétences particulières, aucun des responsables n’a autorité sur les autres. Les constituant.e.s impliqués sont des personnes de confiance qui travaillent avec enthousiasme et détermination à la poursuite de notre objectif commun, soit :
 %blockquote 
-  %strong La convocation d’une Assemblée constituante, totalement libre de ses délibérations!
+  %strong La convocation d’une Assemblée constituante, totalement libre dans ses délibérations!
 
 %p
   Pour ce faire, seul un nombre imposant de Québécois et Québécoises comprenant bien le sens de notre démarche permettra de changer cette culture de démocratie représentative qui est, selon nous, la source de nombreux abus de pouvoir que nous subissons collectivement. 
