--- a/app/views/home/mission.haml
+++ b/app/views/home/mission.haml
@@ -9,7 +9,7 @@
     %h2.sub-section
       Le grand chantier de la Constituante commence maintenant!
     %p
-      L'Assemblée constituante citoyenne du Québec se donne comme mission de promouvoir, de préparer et de provoquer la convocation d’une Assemblée constituante non partisane, totalement libre de ses délibérations.  
+      L'Assemblée constituante citoyenne du Québec se donne comme mission de promouvoir, de préparer et de provoquer la convocation d’une Assemblée constituante non partisane, totalement libre dans ses délibérations.  
     %blockquote
       %p.lead
         Notre regroupement d’hommes et de femmes engagé sur la voie d’une véritable démocratie est déterminé à tout mettre en œuvre pour que la toute première Constitution démocratique du Québec soit rédigée par et pour le peuple. Pour démontrer l’efficacité de notre mode de fonctionnement, nous nous engagerons ensemble, lors d’un exercice simulé, à la rédaction d’une première constitution préparatoire.
