Il restait plusieurs occurences de 'libre DE ses délibérations' à remplacer

--- a/app/views/home/manifest.haml
+++ b/app/views/home/manifest.haml
@@ -23,7 +23,7 @@
         L'Assemblée constituante doit idéalement être convoquée par l’Assemblée nationale pour s’assurer que la Constitution qui en résultera, une fois adoptée par référendum, ne puisse être écartée par les pouvoirs en place, au Québec, au Canada et à l’international.
       
       %li
-        Nous, Constituant.e.s, nous nous engageons à promouvoir, à préparer et à exiger la convocation d'une Assemblée constituante non partisane, libre de ses délibérations, et à tout mettre en œuvre pour obtenir le respect de la volonté du peuple par l'Assemblée nationale.
+        Nous, Constituant.e.s, nous nous engageons à promouvoir, à préparer et à exiger la convocation d'une Assemblée constituante non partisane, libre dans ses délibérations, et à tout mettre en œuvre pour obtenir le respect de la volonté du peuple par l'Assemblée nationale.
 
 
   .col-md-4
