--- a/app/views/home/moyen.haml
+++ b/app/views/home/moyen.haml
@@ -7,7 +7,7 @@
 .row
   .col-md-12    
     =render "mission_nav", active: :moyen
-    %h2.sub-section L'Assemblée constituante citoyenne du Québec s’engage à l'instauration d'une véritable démocratie par un processus constituant libre de ses délibérations. Vous engagez-vous avec NOUS?
+    %h2.sub-section L'Assemblée constituante citoyenne du Québec s’engage à l'instauration d'une véritable démocratie par un processus constituant libre dans ses délibérations. Vous engagez-vous avec NOUS?
 
     %h3 NOS OBJECTIFS
     %h4 Objectif 1: Promouvoir l’importance d’une démarche constituante afin que notre constitution soit rédigée par et pour le peuple. 
@@ -15,7 +15,7 @@
     %p 
       %strong Moyens:
       %ul
-        %li Faire connaître le projet politique d'une assemblée constituante non partisane, libre de ses délibérations, à la population du Québec.
+        %li Faire connaître le projet politique d'une assemblée constituante non partisane, libre dans ses délibérations, à la population du Québec.
         %li Informer le peuple québécois pour qu’il devienne un peuple constituant en lui offrant des outils d’éducation populaire par l'entremise de notre site internet, nos séminaires en ligne et nos rencontres informatives. 
         %li Bâtir des ponts avec la société civile.   
         %li Établir des ateliers constituants qui porteront sur les divers chapitres d'une constitution : <i>choix de société, statut des personnes vulnérables, langue officielle, laïcité, droits, libertés et responsabilités, services publics, éducation, ressources naturelles et environnement, sécurité, politiques économiques, fiscales et monétaires, type de gouvernement, mécanismes de participation des citoyens et des citoyennes, et des régions, gouvernements territoriaux, etc.</i>
@@ -52,7 +52,7 @@
       %ul 
         %li Mobiliser un minimum de 100 000 personnes comprenant bien le sens d'une démarche constituante non partisane.
 
-        %li Faire les pressions nécessaires sur ceux et celles qui souhaitent nous représenter pour qu'ils ou qu’elles s'engagent, au-delà de toute ligne de parti, à convoquer, sans délai, une assemblée constituante non partisane, libre de ses délibérations. Suite au prochain rendez-vous électoral québécois, cette Assemblée constituante sera mandatée pour rédiger et faire adopter notre toute première constitution démocratique du Québec qui sera ensuite entérinée par l’ensemble de la population du Québec.
+        %li Faire les pressions nécessaires sur ceux et celles qui souhaitent nous représenter pour qu'ils ou qu’elles s'engagent, au-delà de toute ligne de parti, à convoquer, sans délai, une assemblée constituante non partisane, libre dans ses délibérations. Suite au prochain rendez-vous électoral québécois, cette Assemblée constituante sera mandatée pour rédiger et faire adopter notre toute première constitution démocratique du Québec qui sera ensuite entérinée par l’ensemble de la population du Québec.
 
     %blockquote 
       %h2 Un monde libre et responsable déploie ses ailes. ENSEMBLE, prenons notre envol!
