--- a/app/views/home/organigramme.haml
+++ b/app/views/home/organigramme.haml
@@ -21,7 +21,7 @@
     %p
       Pour ce faire, seul un nombre imposant de Québécois et Québécoises comprenant bien le sens de notre démarche permettra de changer cette culture de démocratie représentative qui est, selon nous, la source de nombreux abus de pouvoir que nous subissons collectivement. 
     %p
-      Voilà pourquoi nous nous engageons à tout mettre en œuvre pour mobiliser, le plus rapidement possible, un minimum de 1000 personnes par circonscription comprenant bien le sens d’une démarche constituante libre de ses délibérations.    
+      Voilà pourquoi nous nous engageons à tout mettre en œuvre pour mobiliser, le plus rapidement possible, un minimum de 1000 personnes par circonscription comprenant bien le sens d’une démarche constituante libre dans ses délibérations.    
     %blockquote
       %h3 Pour le moment, nous faisons le pari que nos représentants élus respecteront notre volonté.
   .col-md-4
