--- a/app/views/structure/structures_regionales/_constituants.haml
+++ b/app/views/structure/structures_regionales/_constituants.haml
@@ -8,7 +8,7 @@
   =image_tag "organigramme/nous.jpg", class: "img-responsive thumbnail"
 
 %p
-  « Nous, Constituant.e.s, nous nous engageons à promouvoir, à préparer et à exiger la convocation d'une Assemblée constituante non partisane, libre de ses délibérations, et à tout mettre en œuvre pour obtenir que soit respectée la volonté du peuple. »                                                 
+  « Nous, Constituant.e.s, nous nous engageons à promouvoir, à préparer et à exiger la convocation d'une Assemblée constituante non partisane, libre dans ses délibérations, et à tout mettre en œuvre pour obtenir que soit respectée la volonté du peuple. »                                                 
 %p
   Tel est l’objectif des Québécois et des Québécoises qui s’engagent avec nous. Affirmer être Constituant.e.s et vouloir exercer ce pouvoir ne nécessite aucun prérequis ou compétence particulière. Exercer son pouvoir constituant est pour nous un geste citoyen responsable. Ce geste permet de comprendre le mode de fonctionnement d’une Assemblée constituante vraiment démocratique.
 
