--- a/app/views/home/constat.haml
+++ b/app/views/home/constat.haml
@@ -11,7 +11,7 @@
     %p Ce regroupement de Québécois et de Québécoises est né d'un double constat :
     %ol 
       %li Les principes de notre démocratie représentative permettent le contrôle par les partis politiques et les puissances économiques qui détournent le pouvoir à leur profit, à tel point que la population n'a pratiquement aucune prise sur les décisions qui la concernent. Cet état de fait met en péril notre avenir et l'avenir du monde.
-      %li  La seule façon de surmonter notre impuissance est de nous rassembler et d'instituer un pouvoir populaire. Une Assemblée constituante citoyenne NON PARTISANE, libre de ses délibérations, est un moyen pacifique d’y arriver.
+      %li  La seule façon de surmonter notre impuissance est de nous rassembler et d'instituer un pouvoir populaire. Une Assemblée constituante citoyenne NON PARTISANE, libre dans ses délibérations, est un moyen pacifique d’y arriver.
 
     %p Considérant que la population québécoise ne s’est jamais prononcée sur sa Loi fondamentale, NOUS, le peuple, sommes en droit de définir la façon dont nous voulons nous gouverner et dicter les lignes directrices que doit suivre l’État.
 
