--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -99,6 +99,5 @@
         %p.text-muted
           =image_tag("logo_trans.png", height: 30)
           Assemblée constituante citoyenne du Québec @#{Date.today.year}
-          \-          
-          %i.fa.fa-github-square
-          Code source sur #{link_to "Github", "https://github.com/accq/site-web", target: "_blank"}     
+          \-                    
+          #{link_to "À propos du site web", a_propos_path}
