Mettre à jour les tracts

--- a/app/views/home/promotional_tools.haml
+++ b/app/views/home/promotional_tools.haml
@@ -14,9 +14,12 @@
 
 .row
   .col-md-12
-    %h2.sub-section Tract à distribuer
+    %h2.sub-section Tracts à distribuer
 
     %p
       =fa_icon "download"
-      =link_to "Téléchargez le tract", asset_url("tract.pdf"), target: "_blank"
+      =link_to "Tract (x3)", asset_url("tractx3.pdf"), target: "_blank"
 
+    %p
+      =fa_icon "download"
+      =link_to "Tract (x6)", asset_url("tractx6.pdf"), target: "_blank"
