--- a/app/views/home/nous_joindre.haml
+++ b/app/views/home/nous_joindre.haml
@@ -31,7 +31,7 @@
           %td Carl Hurtubise
         %tr
           %td Conseiller
-          %td Louis Gingras
+          %td Rémi Lesmerises
         %tr
           %td Conseiller
           %td Daniel Dion
