Afficher le courriel de chaque comité dans l'organigramme

--- a/app/views/structure/structure_nationale/_comites_nationaux.haml
+++ b/app/views/structure/structure_nationale/_comites_nationaux.haml
@@ -15,6 +15,8 @@
     %li Distribue les outils de promotion aux constituant.e.s dans les ACRQ; 
     %li Accomplit toute autre tâche jugée pertinente.  
 
+  %p
+    %strong Pour vous joindre à ce comité: #{mail_to "mobilisation@constituantecitoyenne.quebec"}
 %section#comite-financement
   %h4.sub-section Financement et trésorie
   %ul
@@ -28,6 +30,8 @@
     %li Organise des campagnes de souscription (financement participatif);
     %li Évalue la possible campagne de financement « picbadge »;
     %li Accomplit toute autre tâche jugée pertinente.  
+  %p
+    %strong Pour vous joindre à ce comité: #{mail_to "financement@constituantecitoyenne.quebec"}
 
 %section#comite-communications
   %h4.sub-section Communications
@@ -43,6 +47,10 @@
     %li Assure l’uniformité du visuel et des outils promotionnels;
     %li Accomplit toute autre tâche jugée pertinente.
 
+  %p
+    %strong Pour vous joindre à ce comité: #{mail_to "communication@constituantecitoyenne.quebec"}
+
+
 %section#comite-education
   %h4.sub-section Éducation (Ateliers constituants)
   %ul
@@ -51,6 +59,9 @@
     %li Assure la gestion de la section « Éducation » de notre site WEB;
     %li Répertorie des exemples de constitutions dans le monde et au Québec; 
     %li Accomplit toute autre tâche jugée pertinente.  
+  %p
+    %strong Pour vous joindre à ce comité: #{mail_to "education@constituantecitoyenne.quebec"}
+
 
 %section#comite-web
   %h4.sub-section Web
@@ -61,6 +72,9 @@
     %li Veille au contenu de nos pages Facebook et agit comme modérateur lorsque nécessaire;
     %li Accomplit toute autre tâche jugée pertinente.  
 
+  %p
+    %strong Pour vous joindre à ce comité: #{mail_to "web@constituantecitoyenne.quebec"}
+
 %section#comite-secretariat
   %h4.sub-section Secrétariat et registrariat
   %ul
@@ -70,6 +84,9 @@
     %li Transmet aux responsables régionaux la liste de leurs constituant.e.s;
     %li Répertorie tous les procès-verbaux des ACRQ et autres documents de l’ACCQ;
     %li Accomplit toute autre tâche jugée pertinente.  
+
+  %p
+    %strong Pour vous joindre à ce comité: #{mail_to "secretariat@constituantecitoyenne.quebec"}
 
 %section#comite-resolution
   %h4.sub-section Résolution de problèmes
@@ -111,4 +128,4 @@
 
 
 %p
-  Pour offrir  et mettre vos talents au service de l’Assemblée constituante citoyenne du Québec, vous pouvez rejoindre maintenant votre Conseil des opérations intérimaire à l’adresse suivante : #{mail_to "coi@constituantecitoyenne.quebec"}
+  %strong Pour vous joindre à ce comité: #{mail_to "mediation@constituantecitoyenne.quebec"}
