Correction mineure dans la page à propos de ce site

--- a/app/views/home/a_propos.haml
+++ b/app/views/home/a_propos.haml
@@ -4,9 +4,8 @@
 -breadcrumb :about_website
 .row
   .col-xs-12
-    %p Ce site web appartient à l'ensemble des constituant.es. Le #{link_to "comité web", structure_path(anchor: "comite-web")} est mandaté pour le mettre à jour selon les besoins de notre regroupement non partisan. Aucun individu ou groupe d'individus ne peut s'auto-proclamer propriétaire de ce site web aux dépens des autres. 
+    %p Ce site web appartient à l'ensemble des constituant.es. Le #{link_to "comité web", structure_path(anchor: "comite-web")} est mandaté pour le mettre à jour selon les besoins de notre regroupement non partisan.
     
-
     %p Le code source est #{link_to "accessible publiquement sur Github", "https://github.com/accq/site-web", target: "_blank"} afin:
     %ol
       %li d'assurer un maximum de transparence;
