Ajouter voxpop #2 + premiere partie conférence Alain Deneault

--- a/app/views/home/mediatheque.haml
+++ b/app/views/home/mediatheque.haml
@@ -7,6 +7,15 @@
   .col-md-6    
     .thumbnail
       .youtube-container
+        .youtube-player{"data-id" => "YiwqudxfQIQ"}    
+
+  .col-md-6    
+    .thumbnail
+      .youtube-container
+        .youtube-player{"data-id" => "JLrKsEP_Vrw"}
+  .col-md-6    
+    .thumbnail
+      .youtube-container
         .youtube-player{"data-id" => "pvR3yU2KB44"}    
 
   .col-md-6    
