--- a/app/views/home/show.haml
+++ b/app/views/home/show.haml
@@ -6,15 +6,11 @@
 
 .row
   .col-md-6
-    %h3.sub-section Première rencontre nationale
-    %p Les constituant.e.s s'expriment!
+    %h3.sub-section Joignez-vous à NOUS!
     .youtube-container
-      .youtube-player{"data-id" => "pvR3yU2KB44"}    
+      .youtube-player{"data-id" => "YiwqudxfQIQ"}    
 
-    %p Roméo Bouchard prend la parole lors de la première rencontre nationale de l'Assemblée constituante citoyenne du Québec.
-    .youtube-container
-      .youtube-player{"data-id" => "YnKJn2_3Dzk"}    
-
+    %p Plusieurs autre vidéos sont disponibles dans la #{link_to "médiathèque", mediatheque_path}!
 
 
     %h3.sub-section Aimez notre page Facebook
