Correction faute de frappe

--- a/app/views/home/show.haml
+++ b/app/views/home/show.haml
@@ -10,7 +10,7 @@
     .youtube-container
       .youtube-player{"data-id" => "YiwqudxfQIQ"}    
 
-    %p Plusieurs autre vidéos sont disponibles dans la #{link_to "médiathèque", mediatheque_path}!
+    %p Plusieurs autres vidéos sont disponibles dans la #{link_to "médiathèque", mediatheque_path}!
 
 
     %h3.sub-section Aimez notre page Facebook
